# freshet

./: .gitignore  .mcp.json  ARCHITECTURE.md  MARKET_OPPORTUNITY.md  Makefile  NAME.md  README.md  docker-compose.yml  fest.md
.github/workflows/: ci.yml  docker.yml  pages.yml  release.yml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/contexthub/: __init__.py  config.py  deps.py  embeddings.py  handoff.py  llm.py  llm_batch.py  llm_compress.py  main.py  models.py
apps/api/contexthub/api/: context_page.py  opensharing.py  routes.py
apps/api/contexthub/assets/: __init__.py  store.py
apps/api/contexthub/eval/: __init__.py  corpus.py  harness.py  metrics.py  run.py
apps/api/contexthub/graph/: __init__.py  build.py  correlate.py  extract.py  insights.py  ner.py  resolve.py  retrieve.py  store.py
apps/api/contexthub/ingest/: chunker.py  redact.py
apps/api/contexthub/jobs/: __init__.py  handlers.py  harvest.py  store.py  worker.py
apps/api/contexthub/rag/: __init__.py  agent.py  assemble.py  rerank.py  summarize.py
apps/api/contexthub/reviews/: __init__.py  store.py
apps/api/contexthub/rules/: __init__.py  extract.py  store.py
apps/api/contexthub/storage/: __init__.py  blob.py  vectors.py
apps/api/schema/: contract.json
apps/api/scripts/: export_schema.py  ingest_real_sessions.py  seed_demo_data.py
apps/api/tests/: test_assemble.py  test_assets.py  test_batch.py  test_build.py  test_config_secrets.py  test_context_page.py  test_contract.py  test_correlate.py  test_curation.py  test_curation_api.py  test_eval.py  test_graph.py  test_graph_augment.py  test_handoff.py  test_harvest.py  test_ingest.py  test_insights.py  test_jobs.py  test_llm_compress.py  test_ner.py  test_rerank.py  test_resolve.py  test_retrieve.py  test_reviews.py  test_rules.py  test_search.py  test_smoke.py  test_visibility.py
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mcp/: README.md  pyproject.toml
apps/mcp/freshet_mcp/: __init__.py  __main__.py  _client.py  server.py
apps/mcp/tests/: test_client.py  test_server.py
apps/web/: README.md  app.js  index.html  styles.css
deploy/: .env.example  Caddyfile  README.md  docker-compose.prod.yml
docs/: DESIGN.md  HANDOFF.md  PR_CONTEXT.md
scripts/: contexthub-pr
videos/freshet-explainer/: .gitignore  SCRIPT.md  STORYBOARD.md  audio_engine_meta.json  (+7 more)
(+98 files in other folders)
