[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contexthub"
version = "0.2.0"
description = "Context Hub central API — ingest, store, and RAG-search AI coding sessions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "boto3>=1.34.0",
    "lancedb>=0.8.0",
    "pyarrow>=15.0.0",
    "sentence-transformers>=3.0.0",
    "anthropic>=0.28.0",
    "openai>=1.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]
compress = [
    "headroom-ai>=0.24",
]
# Optional NLP entity extraction (Slice S5). The regex + gazetteer core works
# without this; spaCy adds person/org NER. After install run:
#   python -m spacy download en_core_web_sm
nlp = [
    "spacy>=3.7",
]
# Optional cross-encoder reranking (Slice S4). Torch-free ONNX; tiny CPU models.
# Retrieval works without it (identity pass-through).
rerank = [
    "flashrank>=0.2",
]

[project.scripts]
contexthub-api = "contexthub.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["contexthub*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
