[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freshet-mcp"
version = "0.1.0"
description = "Freshet AICP broker — stdio MCP server proxying the Context Hub REST binding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.28,<2", "httpx>=0.27"]

[project.scripts]
freshet-mcp = "freshet_mcp.server:main"

[tool.setuptools.packages.find]
include = ["freshet_mcp*"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
